# cursor-view

./: note.txt  pyproject.toml
.specstory/history/: 2025-12-07_14-01Z-poetry-орчин-үүсгэх,-хамаарал-суулгах.md
